# Gesture-Recognition-Real-Time

./: .gitignore  README.md  setup.cfg
callback_dir/train/: events.out.tfevents.1763289978.DESKTOP-NFBFD9S.19484.0.v2  events.out.tfevents.1763290004.DESKTOP-NFBFD9S.25456.0.v2  events.out.tfevents.1763290006.DESKTOP-NFBFD9S.profile-empty
callback_dir/validation/: events.out.tfevents.1763290017.DESKTOP-NFBFD9S.25456.1.v2
configs/: config.yaml
data/armband_signals/s1_exA_r1/: gesture_00.mat  gesture_01.mat  gesture_02.mat  gesture_03.mat  gesture_04.mat  gesture_05.mat  gesture_06.mat  gesture_07.mat  gesture_08.mat  gesture_09.mat  gesture_10.mat  gesture_11.mat  gesture_12.mat
data/armband_signals/s1_exA_r2/: gesture_00.mat  gesture_01.mat  gesture_02.mat  gesture_03.mat  gesture_04.mat  gesture_05.mat  gesture_06.mat  gesture_07.mat  gesture_08.mat  gesture_09.mat  gesture_10.mat  gesture_11.mat  gesture_12.mat
data/armband_signals/s1_exA_r3/: gesture_00.mat  gesture_01.mat  gesture_02.mat  gesture_03.mat  gesture_04.mat  gesture_05.mat  gesture_06.mat  gesture_07.mat  gesture_08.mat  gesture_09.mat  gesture_10.mat  gesture_11.mat  gesture_12.mat
data/armband_signals/s1_exA_r4/: gesture_00.mat  gesture_01.mat  gesture_02.mat  gesture_03.mat  gesture_04.mat  gesture_05.mat  gesture_06.mat  gesture_07.mat  gesture_08.mat  gesture_09.mat  (+3 more)
modules/: DataGenerator.py  logger.py
scripts/: cross_subject_ev.py  mindrove_train.py  train_subjects.py
utils/: data_utils.py  load_logs.py  preprocessing_functions.py  preprocessing_mindrove.py  train_functions.py
(+201 files in other folders)
