[metadata]
name = gesture_recognition
version = 1.0.0
author = Your Name
description = Real-time gesture recognition project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/webfacan/Gesture-Recognition-Real-Time
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
include =
    modules*
    utils*
    scripts*
    configs*

[options.entry_points]
console_scripts =
    train_subjects = scripts.train_subjects:main
